--- a/config.json
+++ b/config.json
@@ -1,5 +1,4 @@
 [{
   "SCOPES": "https://www.googleapis.com/auth/spreadsheets",
-  "SPREADSHEET_ID": "1a_I2ok0TGM95sKDncuUpPLCb3cTz1agcq8RsMPUvXCU",
-  "RANGE_NAME": "Sheet1!A:Z"
+  "SPREADSHEET_ID": "1a_I2ok0TGM95sKDncuUpPLCb3cTz1agcq8RsMPUvXCU"
 }]
